2014-06-05  Michal Nazarewicz  <mina86@mina86.com>

	* automated/tildify-tests.el (tildify-test-find-env-end-re-bug)
	(tildify-test-find-env-group-index-bug): Update to support new
	signature of the `tildify-foreach-region-outside-env' function.
	Namely, it now takes pairs as an argument instead of looking it up in
	`tildify-ignored-environments-alist'.

	* automated/tildify-tests.el (tildify-test--example-html): Add support
	for generating XML code, so that…
	(tildify-test-xml) …test can be added to check handling of XML
	documents.

	* automated/tildify-tests.el (tildify-test-find-env-group-index-bug):
	New test checking end-regex building when multiple environment pairs
	use integers to refer to capture groups.

	* automated/tildify-tests.el (tildify-test-find-env-end-re-bug): New
	test checking end-regex building in `tildify-find-env' function when
	integers (denoting capture groups) and strings are mixed together.

2014-06-02  Michael Albinus  <michael.albinus@gmx.de>

	* automated/tramp-tests.el (tramp-remote-process-environment): Declare.
	(tramp-test29-vc-registered): Set $BZR_HOME.  Remove instrumentation.

2014-06-01  Michael Albinus  <michael.albinus@gmx.de>

	* automated/tramp-tests.el (tramp-test29-vc-registered):
	Instrument failed test case.

2014-05-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* automated/ruby-mode-tests.el (ruby-assert-face): Use font-lock-ensure.
	(ruby-interpolation-keeps-non-quote-syntax): Use syntax-propertize.

2014-05-21  Michal Nazarewicz  <mina86@mina86.com>

	* automated/tildify-tests.el: New file.

2014-05-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* indent/ruby.rb: Add one more test.

	* indent/ps-mode.ps: New file.

	* indent/octave.m: Add a few more tests.

	* automated/core-elisp-tests.el
	(core-elisp-test-window-configurations): New test.

2014-05-26  Glenn Morris  <rgm@gnu.org>

	* automated/package-test.el (package-test-install-single):
	Update for changed output.

2014-05-22  Glenn Morris  <rgm@gnu.org>
